@@ -6,7 +6,8 @@ GLIB_REQUIRED=1.3.10
 GTK_REQUIRED=1.3.10
 GNOME_REQUIRED=1.105
 GNOME_UI_REQUIRED=1.105
-GNOME_PRINT_REQUIRED=0.35
+GNOME_PRINT_REQUIRED=1.0
+GNOME_PRINT_UI_REQUIRED=1.0
 GNOME_VFS_REQUIRED=1.9.4
 LIBZVT_REQUIRED=2.0.0
 GDK_PIXBUF_REQUIRED=2.0.0
@@ -16,6 +17,7 @@ AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
 AC_SUBST(GNOME_UI_REQUIRED)
 AC_SUBST(GNOME_PRINT_REQUIRED)
+AC_SUBST(GNOME_PRINT_UI_REQUIRED)
 AC_SUBST(GNOME_VFS_REQUIRED)
 AC_SUBST(LIBZVT_REQUIRED)
 AC_SUBST(GDK_PIXBUF_REQUIRED)
@@ -40,6 +42,8 @@ PKG_CHECK_MODULES(ANJUTA, \
 	gtk+-2.0 >= $GTK_REQUIRED \
 	libgnome-2.0 >= $GNOME_REQUIRED \
 	libgnomeui-2.0 >= $GNOME_UI_REQUIRED \
+	libgnomeprint-2.0 >= $GNOME_PRINT_REQUIRED \
+	libgnomeprintui-2.0 >= $GNOME_PRINT_UI_REQUIRED \
 	gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
 
 AC_SUBST(ANJUTA_CFLAGS)
